@@ -347,9 +347,37 @@ init|=
 name|getIvyInstance
 argument_list|()
 decl_stmt|;
+name|_organisation
+operator|=
+name|getProperty
+argument_list|(
+name|_organisation
+argument_list|,
+name|ivy
+argument_list|,
+literal|"ivy.organisation"
+argument_list|)
+expr_stmt|;
+name|_module
+operator|=
+name|getProperty
+argument_list|(
+name|_module
+argument_list|,
+name|ivy
+argument_list|,
+literal|"ivy.module"
+argument_list|)
+expr_stmt|;
 name|ensureResolved
 argument_list|(
 name|isHaltonfailure
+argument_list|()
+argument_list|,
+name|getOrganisation
+argument_list|()
+argument_list|,
+name|getModule
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -366,11 +394,11 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|_conf
+literal|"*"
 operator|.
 name|equals
 argument_list|(
-literal|"*"
+name|_conf
 argument_list|)
 condition|)
 block|{
@@ -383,6 +411,21 @@ argument_list|,
 literal|"ivy.resolved.configurations"
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|_conf
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"bad provided for ivy artifactproperty: * can only be used with a prior call to<resolve/>"
+argument_list|)
+throw|;
+block|}
 block|}
 name|_organisation
 operator|=
@@ -448,6 +491,21 @@ operator|new
 name|BuildException
 argument_list|(
 literal|"no module name provided for ivy artifactproperty: It can either be set explicitely via the attribute 'module' or via 'ivy.module' property or a prior call to<resolve/>"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|_conf
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|BuildException
+argument_list|(
+literal|"no conf provided for ivy artifactproperty: It can either be set explicitely via the attribute 'conf' or via 'ivy.resolved.configurations' property or a prior call to<resolve/>"
 argument_list|)
 throw|;
 block|}
