@@ -482,11 +482,30 @@ name|ensureResolved
 parameter_list|(
 name|boolean
 name|haltOnFailure
+parameter_list|,
+name|String
+name|org
+parameter_list|,
+name|String
+name|module
 parameter_list|)
 block|{
 name|ensureMessageInitialised
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|org
+operator|!=
+literal|null
+operator|&&
+name|module
+operator|!=
+literal|null
+condition|)
+block|{
+return|return;
+block|}
 name|Object
 name|reference
 init|=
