@@ -334,6 +334,173 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testWithAPreviousResolve
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// first we do a resolve in another project
+name|Project
+name|project
+init|=
+operator|new
+name|Project
+argument_list|()
+decl_stmt|;
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.conf.file"
+argument_list|,
+literal|"test/repositories/ivyconf.xml"
+argument_list|)
+expr_stmt|;
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/java/fr/jayasoft/ivy/ant/ivy-simple.xml"
+argument_list|)
+expr_stmt|;
+name|IvyResolve
+name|resolve
+init|=
+operator|new
+name|IvyResolve
+argument_list|()
+decl_stmt|;
+name|resolve
+operator|.
+name|setProject
+argument_list|(
+name|project
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|setCache
+argument_list|(
+name|_cache
+argument_list|)
+expr_stmt|;
+name|resolve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+comment|// then we do a retrieve with the correct module information
+name|_retrieve
+operator|.
+name|setOrganisation
+argument_list|(
+literal|"jayasoft"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setModule
+argument_list|(
+literal|"resolve-simple"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setConf
+argument_list|(
+literal|"default"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|RETRIEVE_PATTERN
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testFailureWithoutAPreviousResolve
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// we do a retrieve with the module information whereas no resolve has been previously done
+try|try
+block|{
+name|_retrieve
+operator|.
+name|setOrganisation
+argument_list|(
+literal|"jayasoft"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setModule
+argument_list|(
+literal|"resolve-simple"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|setConf
+argument_list|(
+literal|"default"
+argument_list|)
+expr_stmt|;
+name|_retrieve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"retrieve without previous resolve should have thrown an exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+comment|// OK
+block|}
+block|}
+specifier|public
+name|void
 name|testFailure
 parameter_list|()
 throws|throws
